Fixed double scrollbar

--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
 }
 
 body {
-    /* overflow-y: scroll; */
-    position: relative;
+    overflow-x:hidden;
+    /* overflow-y:hidden; */
 }
 
 section {
@@ -43,7 +41,7 @@ section {
 }
 
 #name-screen li {
-    margin-right: 20px;
+    margin-right: 25px;
     list-style-type: none;
     font-family: "Roboto Slab", serif;
 }
@@ -57,7 +55,10 @@ section {
     display: none;
 }
 
-
+body {
+    height: 200vh;
+    overflow-x: hidden;
+}
   
 #name-screen {
     height: 100vh;
@@ -74,13 +75,10 @@ section {
 #main-content {
     position: relative;
     z-index: 1;
+    background: white;
 }
   
-/* #main-content section {
+#main-content section {
     min-height: 100vh;
     padding: 2rem;
-} */
-
-.scroll-container {
-    height: 200vh;
 }
